Fix spacing between text-to-speech and question title

--- a/src/components/FeelingRange/FeelingRange.scss
+++ b/src/components/FeelingRange/FeelingRange.scss
@@ -16,6 +16,7 @@ input {
 }
 
 .feeling-range {
+  margin-top: 1rem;
   padding: 1rem;
   max-width: 40rem;
   border: 1px solid variables.$Google-Dark-Grey;
