--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0;
+  margin: 1rem;
   @include mixins.tablet {
-    margin: 3rem;
+    margin: 1rem 3rem;
   }
 }
