--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -17,7 +17,7 @@ body {
 h1 {
   font-size: 1.75rem;
   line-height: 2.5rem;
-  font-weight: 700;
+  font-weight: 500;
   @include mixins.tablet {
     font-size: 2rem;
     line-height: 3rem;
